# XrealVisionStereo

./: CMakeLists.txt  Info.plist  README.md  run.sh
cursor-build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake
cursor-build-debug/XrealVisionStereo.app/Contents/MacOS/: XrealVisionStereo
cursor-build-debug/XrealVisionStereo.app/Contents/Resources/html/: shaders.js  stereo_view.html
cursor-build-debug/XrealVisionStereo.app/Contents/Resources/html/glsl/: water_calm.glsl
html/: stereo_view.html
html/glsl/: fire_detailed.glsl  water_simple.glsl
src/: App.cpp  App.h  MainFrame.cpp  MainFrame.h  ScreenResolution.h  ScreenResolution.mm  XRealGlassesController.cpp  XRealGlassesController.h  main.cpp
src/XRealGlassesController/: CommandHelper.cpp  CommandHelper.h  DevicesHelper.cpp  DevicesHelper.h  GLASSES_INFO.cpp  GLASSES_INFO.h  INTERFACE_INFO.cpp  INTERFACE_INFO.h  Index.cpp  Index.h  LOG_LEVEL.h  Utils.cpp  Utils.h
web/: package-lock.json  package.json
web/src/: App.vue
web/src/components/: CPlusPlusLogs.vue  StereoView.vue
web/src/shaders/: fire1.fragment.glsl  fire2.fragment.glsl  fire3.fragment.glsl  galaxy1.fragment.glsl  galaxy2.fragment.glsl  galaxy3.fragment.glsl  water1.fragment.glsl  water2.fragment.glsl  water3.fragment.glsl
web/src/world/: world.ts
web/src/world/billboard/: fps.ts
web/src/world/camera/: leftEyeCamera.ts  main.ts  rightEyeCamera.ts
web/src/world/definition/: constant.ts
web/src/world/ground/: grid.ts
web/src/world/light/: main.ts
web/src/world/object/cluster/: container.ts  factory.ts
web/src/world/object/page/: bigCircle.ts  index.ts  snakeInCube.ts
web/src/world/object/widget/: axisIndicator.ts  textOutput.ts
web/src/world/post-processing/: composer.ts
web/src/world/test-object/: cube.ts  glslCube.ts
